--- a/packages/server/examples/collision-events.html
+++ b/packages/server/examples/collision-events.html
@@ -7,6 +7,12 @@
   <m-label id="standing-label" content="Standing: 0" rx="-90" z="2" y="0.08" width="3" font-size="40"></m-label>
 </m-cube>
 
+<m-cube x="15.078" y="3.099" visible="true" color="#8b2727" debug="false" collide="true" sx="5" sy="1" sz="5" opacity="0.8"></m-cube>
+
+<m-light x="-1.892"></m-light>
+<m-label y="3.245" content="test13244124"></m-label>
+
+
 <m-group id="stairs" ry="180" x="-5.5" z="3"></m-group>
 
 <script>
