--- a/packages/server/examples/duck.html
+++ b/packages/server/examples/duck.html
@@ -1,9 +1,22 @@
 <m-model
   id="duck"
-  src="/assets/duck.glb"
+  src="/assets/models/taunt4.glb"
+  anim="/assets/models/taunt4.glb"
+  anim-loop="true"
+  anim-enabled="true"
   sx="2"
   sy="2"
-  sz="0.2"
+  sz="2"
 >
-  <m-attr-anim attr="ry" start="0" end="360" duration="4000"></m-attr-anim>
+</m-model>
+
+<m-model
+  id="duck"
+  x="10"
+  y="10"
+  src="/assets/models/LP_Forest.glb"
+  sx="1"
+  sy="1"
+  sz="1"
+>
 </m-model>
